<resources>
    <string name="app_name">Nhật ký KTTS</string>
    <string name="dang_xu_ly">Đang xử lý</string>
    <string name="chon_cang_khong_duoc">Chọn cảng không được</string>
    <string name="lay_cang_khong_duoc">Lấy cảng không được</string>
    <string name="vui_long_thu_lai">Vui lòng thử lại</string>
    <string name="chieu_dai_toan_bo_vang_cau">Chiều dài toàn bộ vàng câu</string>
    <string name="so_luoi_cau">Số lưỡi câu</string>
    <string name="chieu_dai_toan_bo_luoi">Chiều dài toàn bộ lưới</string>
    <string name="chieu_cao_luoi">Chiều cao lưới</string>
    <string name="chu_vi_mieng_luoi">Chu vi miệng lưới</string>
    <string name="chieu_dai_gieng_phao">Chiều dài giềng phao</string>
    <string name="thieu_thong_tin">Thiếu thông tin</string>
    <string name="vui_long_nhap_day_du_thong_tin">Vui lòng nhập đầy đủ thông tin</string>
    <string name="loi_khi_cap_nhat">Lỗi khi cập nhật</string>
    <string name="khong_co_mang">Không có mạng</string>
    <string name="loi">Lỗi</string>
    <string name="sai_tai_khoan_hoac_mat_khau">Sai tài khoản hoặc mật khẩu</string>
    <string name="da_xay_ra_loi_trong_qua_trinh_dang_nhap">Đã xảy ra lỗi trong quá trình đăng nhập</string>
    <string name="dang_nhap_that_bai">Đăng nhập thất bại</string>
    <string name="khong_lay_duoc_ho_so">Không lấy được hồ sơ</string>
    <string name="hay_dang_nhap_lai">Hãy đăng nhập lại</string>
    <string name="quay_ve">Quay về</string>
    <string name="hay_bat_gps">HÃY BẬT GPS</string>
    <string name="vui_long_cung_cap_day_du_anh_ve_loai_nay">Vui lòng cung cấp đầy đủ ảnh về loài này</string>
    <string name="san_luong_sai">Sản lượng sai</string>
    <string name="tag_khong_ro"><![CDATA[<Không rõ>]]></string>
    <string name="dang_lay_vi_tri">Đang lấy vị trí</string>
    <string name="thu_lai_sau_1_giay">Thử lại sau 1 giây</string>
    <string name="ket_thuc_loi">Kết thúc lỗi</string>
    <string name="thu_lai_sau_x_giay_hoac_lau_hon_neu_gps_kem">Thử lại sau 5 giây hoặc lâu hơn nếu GPS kém</string>
    <string name="lay_loai_loi">Lấy loài lỗi</string>
    <string name="chup_anh">Chụp ảnh</string>
    <string name="chon_anh">Chọn ảnh</string>
    <string name="dong">Đóng</string>
    <string name="chon_phuong_thuc_lay_anh">Chọn phương thức lấy ảnh</string>
    <string name="doi_nghe">Đổi nghề</string>
    <string name="lay_nghe_that_bai">Lấy nghề thất bại</string>
    <string name="kiem_tra">Kiểm tra</string>
    <string name="hoan_tat">Hoàn tất</string>
    <string name="doi_mat_khau">Đổi mật khẩu</string>
    <string name="quen_mat_khau">Quên mật khẩu</string>
    <string name="kiem_chung">Kiểm chứng</string>
    <string name="mat_khau_trong">Mật khẩu trống</string>
    <string name="hai_mat_khau_khong_giong_nhau">Hai mật khẩu không giống nhau</string>
    <string name="doi_mat_khau_hoan_tat">Đổi mật khẩu hoàn tất</string>
    <string name="doi_mat_khau_khong_thanh_cong">Đổi mật khẩu không thành công</string>
    <string name="vui_long_nhap_tai_khoan_va_so_dang_ky_tau">Vui lòng nhập tài khoản và số đăng ký tàu</string>
    <string name="thong_tin_sai">Thông tin sai</string>
    <string name="chua_chon_cang">Chưa chọn cảng</string>
    <string name="dong_bo_chuyen_di_bien_thanh_cong">Đồng bộ chuyến thành công</string>
    <string name="chuyen_di_bien_da_ton_tai">Chuyến đã tồn tại. Bỏ qua việc đồng bộ chuyến này</string>
    <string name="dong_bo_chuyen_di_bien_chua_duoc">Đồng bộ chưa được</string>
    <string name="khong_the_dang_ky_vui_long_thu_lai">Không thể đăng ký, hãy thử lại</string>
    <string name="dang_ky_khong_thanh_cong">Đăng ký không thành công</string>
    <string name="loi_khong_xac_dinh">Lỗi không xác định</string>
    <string name="khong_the_kiem_tra_duoc_so_dang_ky_tau">Không thể kiểm tra được số đăng ký tàu</string>
    <string name="so_dang_ky_tau_da_ton_tai">Số đăng ký tàu đã tồn tại</string>
    <string name="bi_trung">Bị trùng</string>
    <string name="loi_khi_kiem_tra_so_dang_ky_tau">Lỗi khi kiểm tra số đăng ký tàu</string>
    <string name="loi_du_lieu">Lỗi dữ liệu</string>
    <string name="khoi_tao_trinh_doc_du_lieu_khong_duoc">Khởi tạo trình đọc dữ liệu không được</string>
    <string name="vui_long_chon_cang">Vui lòng chọn cảng</string>
    <string name="chua_co_me_nao">Chưa có mẻ nào</string>
    <string name="van_thoat">Vẫn thoát?</string>
    <string name="dong_y">Đồng ý</string>
    <string name="huy">Hủy</string>
    <string name="den">đến</string>
    <string name="cong_suat_may_khong_hop_le">Công suất máy không hợp lệ</string>
    <string name="chieu_dai_tau_khong_hop_le">Chiều dài tàu không hợp lệ</string>
    <string name="khong_the_cap_nhat">Không thể cập nhật</string>
    <string name="cap_nha_thanh_cong">Cập nhật thành công</string>
    <string name="cap_nhat_khong_thanh_cong">Cập nhật không thành công</string>
    <string name="vui_long_nhap_so_dang_ky_tau">Vui lòng nhập số đăng ký tàu</string>
    <string name="thieu_ma_tau">Thiếu mã tàu</string>
    <string name="dang_xuat">Đăng xuất</string>
    <string name="ban_co_chac_chan">Bạn chắc chắn?</string>
    <string name="dang_xuat_loi">Đăng xuất lỗi</string>
    <string name="luu_khong_duoc">Lưu không được</string>
    <string name="ma_tai_khoan">Mã tài khoản</string>
    <string name="so_dang_ky_tau">Số đăng ký tàu</string>
    <string name="mat_khau_moi">Mật khẩu mới</string>
    <string name="nhap_lai_mat_khau_moi">Nhập lại mật khẩu mới</string>
    <string name="da_thu">Đã thu:</string>
    <string name="loai_khong_xac_dinh">LOÀI KHÔNG XÁC ĐỊNH</string>
    <string name="san_luong_kg">Sản lượng (KG)</string>
    <string name="cap_nhat">Cập nhật</string>
    <string name="hoan_thanh">Hoàn thành</string>
    <string name="mat_khau">Mật khẩu</string>
    <string name="dang_nhap">Đăng nhập</string>
    <string name="hoac">Hoặc</string>
    <string name="dang_ky">Đăng ký</string>
    <string name="them_loai_khac">Thêm loài khác</string>
    <string name="ket_thuc_me">Kết thúc mẻ</string>
    <string name="bam_de_chon_cang_ve">Bấm để chọn cảng về</string>
    <string name="nop_nhat_ky">Nộp nhật ký</string>
    <string name="so_giay_phep_khai_thac">Số giấy phép khai thác</string>
    <string name="thoi_han">Thời hạn</string>
    <string name="nghe_phu">Nghề phụ</string>
    <string name="hoan_tat_dang_ky">Hoàn tất đăng ký</string>
    <string name="ho_ten_chu_tau">Họ tên chủ tàu</string>
    <string name="ho_ten_thuyen_truong">Họ tên thuyền trưởng</string>
    <string name="cong_suat_may_chinh_cv">Công suất máy chính (CV)</string>
    <string name="chieu_dai_cua_tau_m">Chiều dài của tàu (m)</string>
    <string name="tiep_theo">Tiếp theo</string>
    <string name="bam_de_chon_cang_xuat_phat">Bấm để chọn cảng xuất phát</string>
    <string name="bat_dau">Bắt đầu</string>
    <string name="them_me_moi">Thêm mẻ mới</string>
    <string name="hoan_tat_sua">Hoàn tất sửa</string>
    <string name="xin_chao_thuyen_truong">Xin chào thuyền trưởng</string>
    <string name="hay_chon_dieu_ban_can_ben_duoi">Hãy chọn điều bạn cần bên dưới</string>
    <string name="sua_thong_tin">Sửa thông tin</string>
    <string name="thoi_gian_tha">Thời gian thả</string>
    <string name="vi_tri_tha">Vị trí thả</string>
    <string name="thoi_gian_thu">Thời gian thu</string>
    <string name="vi_tri_thu">Vị trí thu</string>
    <string name="tong_san_luong_tan">Tổng sản lượng (tấn)</string>
    <string name="luu">Lưu</string>
    <string name="cai_dat">Cài đặt</string>
    <string name="lich_su_chuyen_di">Lịch sử chuyến đi</string>
    <string name="sua_ho_so">Sửa hồ sơ</string>
    <string name="thiet_lap">Thiết lập</string>
    <string name="ket_thuc_chuyen_di_bien">Kết thúc chuyến đi biển</string>
    <string name="thong_tin_me">Thông tin mẻ</string>
    <string name="san_luong_me">Sản lượng mẻ</string>
    <string name="me_danh_bat">Mẻ đánh bắt</string>
    <string name="chon_cang">Chọn cảng</string>
    <string name="khoi_tao_chuyen_di_bien">Khởi tạo chuyến đi biển</string>
    <string name="so_dang_ky">Sổ đăng ký</string>
    <string name="kich_thuoc_ngu_cu">Kích thước ngư cụ</string>
    <string name="danh_sach_nghe">Danh sách nghề</string>
    <string name="thong_tin_ho_so">Thông tin hồ sơ</string>
    <string name="tiep_tuc">Tiếp tục</string>
    <string name="chuyen_di_nay_se_duoc_dong_bo_ngam">Chuyến đi này sẽ được đồng bộ ngầm</string>
    <string name="da_dong_bo_tat_ca">Đã đồng bộ hết</string>
    <string name="con_d_chuyen">Còn %1$d chuyến cần đồng bộ</string>
    <string name="doi_ngon_ngu">Đổi ngôn ngữ</string>
    <string name="da_xoa">Đã xóa</string>
    <string name="gom_x_loai_va_y_kg">Gồm %1$d loài với %2$s kg</string>
    <string name="chua_dong_bo">Chưa đồng bộ</string>
    <string name="xoa_chuyen_trung">Xóa chuyến bị trùng</string>
    <string name="da_dong_bo_len_server">Đã đồng bộ lên máy chủ</string>
    <string name="moi_thay_doi_se_duoc_cap_nhat_khi_khoi_dong_lai_ung_dung">Mọi thay đổi sẽ được cập nhật sau khi ứng dụng được khởi động lại</string>
    <string name="bo_qua_tat_ca_du_lieu_hien_tai">Bỏ qua tất cả dữ liệu hiện tại?</string>
    <string name="van_giu">Vẫn giữ</string>
    <string name="xac_nhan_thay_the_vi_tri">Bạn có muốn lấy vị trí hiện tại để thay thế cho vị trí thu trức đó của mẻ này?</string>
    <string name="xac_nhan_thay_the_thoi_gian_thu">Bạn có muốn thay thế thời gian thu trước đó bằng thời gian thu lúc này?</string>
    <string name="xac_nhan_thay_doi_san_luong">Thay đổi sản lượng của loài này?</string>
    <string name="cap_nhat_thong_tin_ket_thuc">Cập nhật lại thông tin kết thúc</string>
    <string name="nhap_tu_khoa">Nhập tên cảng...</string>
</resources>