<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_background_color"
    tools:context=".ui.khai_bao_thong_tin_ho_so.ManHinhKhaiBaoThongTinHoSo">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginLeft="35dp"
                android:layout_marginTop="@dimen/default_margin"
                android:layout_marginEnd="@dimen/default_margin"
                android:layout_marginRight="@dimen/default_margin"
                android:layout_marginBottom="5dp"
                android:text="@string/ho_ten_chu_tau"
                android:textColor="@color/sub_color"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/mhcctsnEdtParam1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/default_margin"
                android:layout_marginRight="@dimen/default_margin"
                android:background="@drawable/default_edt_bg"
                android:drawableStart="@drawable/ic_user_32"
                android:drawableLeft="@drawable/ic_user_32"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/ho_ten_chu_tau"
                android:inputType="textPersonName|textAutoComplete|textAutoCorrect"
                android:lines="1"
                android:padding="15dp"
                android:textSize="@dimen/default_font_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginLeft="35dp"
                android:layout_marginTop="@dimen/default_margin"
                android:layout_marginEnd="@dimen/default_margin"
                android:layout_marginRight="@dimen/default_margin"
                android:layout_marginBottom="5dp"
                android:text="@string/ho_ten_thuyen_truong"
                android:textColor="@color/sub_color"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/mhkbtthsEdtHoTenThuyenTruong"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/default_margin"
                android:layout_marginRight="@dimen/default_margin"
                android:background="@drawable/default_edt_bg"
                android:drawableStart="@drawable/ic_captain"
                android:drawableLeft="@drawable/ic_captain"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/ho_ten_thuyen_truong"
                android:inputType="textPersonName|textAutoComplete|textAutoCorrect"
                android:lines="1"
                android:padding="15dp"
                android:textSize="@dimen/default_font_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginLeft="35dp"
                android:layout_marginTop="@dimen/default_margin"
                android:layout_marginEnd="@dimen/default_margin"
                android:layout_marginRight="@dimen/default_margin"
                android:layout_marginBottom="5dp"
                android:text="@string/so_dang_ky_tau"
                android:textColor="@color/sub_color"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/mhkbtthsEdtSoDangKyTau"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/default_margin"
                android:layout_marginRight="@dimen/default_margin"
                android:background="@drawable/default_edt_bg"
                android:drawableStart="@drawable/ic_boat"
                android:drawableLeft="@drawable/ic_boat"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/so_dang_ky_tau"
                android:lines="1"
                android:padding="15dp"
                android:textSize="@dimen/default_font_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginLeft="35dp"
                android:layout_marginTop="@dimen/default_margin"
                android:layout_marginEnd="@dimen/default_margin"
                android:layout_marginRight="@dimen/default_margin"
                android:layout_marginBottom="5dp"
                android:text="@string/cong_suat_may_chinh_cv"
                android:textColor="@color/sub_color"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/mhkbtthsEdtCongSuatMayChinh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/default_margin"
                android:layout_marginRight="@dimen/default_margin"
                android:background="@drawable/default_edt_bg"
                android:drawableStart="@drawable/ic_milling_machine"
                android:drawableLeft="@drawable/ic_milling_machine"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/cong_suat_may_chinh_cv"
                android:inputType="numberDecimal"
                android:lines="1"
                android:padding="15dp"
                android:textSize="@dimen/default_font_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginLeft="35dp"
                android:layout_marginTop="@dimen/default_margin"
                android:layout_marginEnd="@dimen/default_margin"
                android:layout_marginRight="@dimen/default_margin"
                android:layout_marginBottom="5dp"
                android:text="@string/chieu_dai_cua_tau_m"
                android:textColor="@color/sub_color"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/mhkbtthsEdtChieuDaiCuaTau"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/default_margin"
                android:layout_marginRight="@dimen/default_margin"
                android:background="@drawable/default_edt_bg"
                android:drawableStart="@drawable/ic_double_arrow"
                android:drawableLeft="@drawable/ic_double_arrow"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/chieu_dai_cua_tau_m"
                android:inputType="numberDecimal|textAutoComplete"
                android:lines="1"
                android:padding="15dp"
                android:textSize="@dimen/default_font_size" />

            <Button
                android:id="@+id/mhkbtthsBtnTiepTheo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"
                android:background="@drawable/btn_info"
                android:padding="@dimen/default_padding"
                android:text="@string/tiep_theo"
                android:textColor="#FFF"
                android:textSize="@dimen/default_font_size" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>