<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#5C000000"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bottom_sheet_background"
        android:orientation="vertical"
        android:paddingTop="@dimen/default_padding">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize">

            <ImageView
                android:id="@+id/islmdHinhAnhLoai"
                android:layout_width="?android:attr/actionBarSize"
                android:layout_height="?android:attr/actionBarSize"
                android:padding="10dp"
                android:src="@drawable/ic_problem" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toStartOf="@id/islmdIvBtnNutDong"
                android:layout_toLeftOf="@id/islmdIvBtnNutDong"
                android:layout_toEndOf="@id/islmdHinhAnhLoai"
                android:layout_toRightOf="@id/islmdHinhAnhLoai"
                android:gravity="center"
                android:text="@string/loai_khong_xac_dinh"
                android:textColor="#000000"
                android:textSize="@dimen/default_font_size"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/islmdIvBtnNutDong"
                android:layout_width="?android:attr/actionBarSize"
                android:layout_height="?android:attr/actionBarSize"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:src="@drawable/ic_close_black_24dp" />
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:layout_marginRight="@dimen/default_margin"
            android:layout_marginBottom="5dp"
            android:text="@string/san_luong_kg"
            android:textColor="@color/sub_color"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/islmdEdtSanLuong"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginRight="@dimen/default_margin"
            android:background="@drawable/default_edt_bg"
            android:drawableStart="@drawable/ic_weight"
            android:drawableLeft="@drawable/ic_weight"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/san_luong_kg"
            android:inputType="numberDecimal"
            android:padding="15dp"
            android:textSize="@dimen/default_font_size" />

        <Button
            android:id="@+id/islmdBtnCapNhatSanLuong"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/mhdslBtnKetThucMe"
            android:layout_margin="@dimen/default_margin"
            android:background="@drawable/btn_info"
            android:padding="@dimen/default_padding"
            android:text="@string/cap_nhat"
            android:textColor="#FFF"
            android:textSize="@dimen/default_font_size" />
    </LinearLayout>

</RelativeLayout>